--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             </div>
         </div>
 
-        <p class="label">today is ur 🎂</p>
+        <p class="label">today is ur dayy🎂</p>
     </div>
     <audio id="bgMusic" autoplay loop>
         <source src="music/song.mp3" type="audio/mpeg">
@@ -391,5 +391,6 @@ Happy Birthday ulet, have a nice day and have fun 😉😉😉☺️😛😙😊
     </script>
 
 </body>
+
 
 </html>
